# internal/modules/notification/handler/dto/input/subscribe_firebase.go
@@ -1,0 +1,5 @@
+package input
+
+type SubscribeFirebaseInput struct {
+	Token string `binding:"required"`
+} //	@name	SubscribeFirebaseInput
